--- a/src/style.css
+++ b/src/style.css
@@ -57,7 +57,6 @@ body{
 
 .heading{
     margin: 0 auto;
-    
     text-align: center;
     
 }
@@ -70,8 +69,12 @@ body{
     padding-bottom: 20px;
 }
 
+#proti{
+    background-color: #e84c47;
+}
 .portfolio {
     overflow: hidden;
+    background-color: #084772;
 }
 .portfolio img{
     max-width: 100%;
@@ -87,15 +90,12 @@ body{
     cursor: zoom-in;
 }
 
-.container-fluid{
-    height: 800px;
-}
 
 
 
-.experience-info{
-    background-color: aqua;
-}
+
+
+
 
 /* timeline */
 
@@ -212,4 +212,214 @@ body{
 
 .main-timeline .timeline:nth-child(even){
     margin-bottom: 80px;
+}
+
+/* Timeline */
+
+.timeline{
+    padding: 30px 30px;
+    position: relative;
+    list-style: none;
+}
+
+.timeline::before{
+    content: "";
+    top: 0;
+    bottom: 0;
+    position: absolute;
+    width: 5px;
+    background-color: #333;
+    left: 50%;
+    margin-left: -2.5px;
+}
+
+.timeline > li{
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.timeline > li::after{
+    clear: both;
+}
+
+.timeline > li::before, .timeline > li::after{
+    content: "";
+    display: table;
+}
+
+.timeline li .timeline-badge{
+    color: #d82c2e;
+    width: 50px;
+    line-height: 50px;
+    font-size: 20px;
+    text-align: center;
+    position: absolute;
+    top: 16px;
+    left:50%;
+    margin-left: -25px;
+    background-color: #ddd;
+    border-radius: 50%;
+}
+
+.timeline-panel-container{
+    width: 50%;
+    float: left;
+}
+
+.timeline-panel-container-inverted{
+    width: 50%;
+    float: right;
+}
+
+.timeline-panel{
+    width: 90%;
+    float: right;
+    margin-right: 40px;
+    border: 1px solid #d4d4d4;
+    border-radius: 7px;
+    padding: 20px 25px;
+    position: relative;
+    box-shadow: 0 1px 6px rgba(0,0,0, 0.175);
+    background: #fff;
+}
+
+.timeline-panel-container-inverted .timeline-panel{
+    float: left;
+    margin-left: 40px;
+
+}
+
+.timeline-panel::after{
+    content: " ";
+    position: absolute;
+    top: 27px;
+    right: -14px;
+    display: inline-block;
+    border-top: 14px solid transparent;
+    border-left: 14px solid #fff;
+    border-right: 0 solid #fff;
+    border-bottom: 14px solid transparent;
+}
+
+.timeline-panel-container-inverted .timeline-panel::after{
+    border-left-width: 0;
+    border-right-width: 14px;
+    left: -14px;
+    right: auto;
+}
+
+.timeline-heading h3{
+    margin-top: 5px;
+    font-size:30px;
+}
+
+.timeline-heading h4{
+    color:#d82c2e;
+}
+
+.change-width{
+    font-size: 2.70vh;
+}
+
+#education{
+    padding: 20px;
+    height: auto;
+    
+}
+
+#education .education-info{
+    max-width: 90%;
+    margin: 0 auto;
+    box-shadow: 1px 1px 9px 1px darkgray;
+    margin-bottom: 30px;
+}
+
+#skills{
+    margin-bottom: 30px;
+}
+
+#skills .heading{
+    margin-bottom: 50px;
+}
+
+#skills .skills-content{
+    display: flex;
+    justify-content: space-around;
+    height: auto;
+    margin-bottom: 40px;
+}
+
+#skills .skills-content .front-end-skill{
+    height: auto;
+    text-align: center;
+}
+
+#skills .skills-content .front-end-skill h3{
+    
+    font-size: 3em;
+    padding: 10px;
+}
+
+
+ 
+#skills .skills-content .front-end-skill img{
+    width: 100%;
+    height: 100%;
+}
+
+.postgres{
+    font-size: 15px;
+}
+
+
+/* footer  */
+
+footer{
+    height: auto;
+    
+}
+
+footer .footer-contact{
+    padding-bottom: 20px;
+    
+}
+
+.contact-detail{
+    margin-top: 20px;
+    margin-left: 50px;
+    
+}
+
+.contact-detail h2{
+    font-size: 3em;
+    color:white;
+}
+
+.contact-detail ul{
+    list-style: none;
+    line-height: 2rem;
+}
+
+.contact-detail ul li{
+    color: white;
+}
+
+.location-details{
+    margin-top: 20px;
+    margin-left: 30px;
+    text-align: center;
+}
+
+.location-details h2{
+    font-size: 3em;
+    color:white;
+}
+
+.footer-contact .copy-right{
+    margin: 50px auto 0 auto;
+    text-align: center;
+}
+
+.footer-contact .copy-right p{
+    color: #d4d4d4;
 }
